Grid overflow issue fixed

--- a/assets/saves-style.css
+++ b/assets/saves-style.css
@@ -30,7 +30,10 @@ p,h1{
     justify-content: center;
     align-items: center;
 }
-.hid{visibility: hidden;}
+.hid{
+    visibility: hidden;
+    display:none !important;
+}
 
 @font-face {
     font-family: 'PoorRichard';
